# simplesave

./: .env.example  .gitignore  ARCHITECTURE_AND_COURSE_MAP.md  ARCHITECTURE_HE.md  CLAUDE.md  CLIENT_EXP.md  DECISIONS.md  DEPLOY_READINESS.md  EXPLAINER_01_THE_PROJECT.md  EXPLAINER_02_THE_CODE.md  GAP.md  PORT_PLAN.md  PRESENTATION_PREP.md  PROGRESS.md  README.md  SimpleSave_NextJS_Prompt.md  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.tsbuildinfo
alembic/: env.py
app/: error.tsx  globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/active/: page.tsx
app/admin/: actions.ts  page.tsx
app/advisor/: actions.ts  page.tsx
app/authorizations/: actions.ts  page.tsx
app/checkout/: actions.ts  (+1 more)
components/: AmortizationChart.tsx  AppFooter.tsx  AppHeader.tsx  ClockCard.tsx  ClocksGrid.tsx  DashHeader.tsx  DocStatusBadge.tsx  DocUploadForm.tsx  InsuranceCompare.tsx  LeadCaptureCard.tsx  MessagesThread.tsx  NewMortgageForm.tsx  PaymentCharts.tsx  PendingButton.tsx  RefiTracksForm.tsx  RiskGauge.tsx  ServiceWorkerRegister.tsx  StatusStepper.tsx  TemplateEditor.tsx  TrackDonut.tsx
drive-download-20260625T130754Z-3-001/: עיצוב מערכת 6.26((.docx
e2e/: calculators.spec.ts  documents-upload.spec.ts  questionnaire.spec.ts  register.spec.ts  verify-full.mjs
frontend/: app.js  index.html  style.css
lib/: api-schemas.ts  billing.ts  clock-card-data.ts  display-risk.ts  engine-config.ts  format.ts  lead-actions.ts  messages.ts  onboarding.ts  rate-limit.ts  requests.ts  schedule.ts  securities.ts  session.ts  stage.ts  supabase-server.ts  supabase.ts
presentation/: flow_audit.md  phase1_reconciliation.md
public/: manifest.json  sw.js
reference/: simplesave-mockup.html  סימולטור_משכנתא.html
scripts/: dump_golden.py
supabase/: config.toml  seed.ts
tests/: conftest.py  test_health.py  test_smoke.py
(+96 files in other folders)
